Contact page created

--- a/InspiRecipes/html/Contact.html
+++ b/InspiRecipes/html/Contact.html
@@ -5,6 +5,7 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <title>InspiRecipes</title>
+        <link rel="stylesheet" href="../css/Contact.css">
         <link rel="stylesheet" href="../css/Styles.css">
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
@@ -33,6 +34,29 @@
             <img id="avocado" src="../Pictures/avocado.png">
         </div>
 
+        <div id="container">
+            <div id="personalInfo">
+                <h1 id="name">Name Surname</h1>
+                <img id="profilePicture" src="../Pictures/profile.png" />
+                <p id="info">
+                    <h3>Address 123</h3>
+                    <h3>email.address@gmail.com</h3>
+                    <h3>0491 234 567</h3>
+                    <h3>name.surname</h3>
+                    <h3>name.surname<h3>
+                </p>
+            </div>
+
+            <div id="contact">
+                <h1>Contact me</h1>
+                <h2>Your e-mail:</h2>
+                <input class="form-control" id="mail">
+                <h2>Message:</h2>
+                <textarea class="form-control" id="message"></textarea>
+                <br>
+                <button id="send">Send</button>
+            </div>
+        </div>
     </body>
 
 </html>
