Recipes page created

--- a/InspiRecipes/html/Recipes.html
+++ b/InspiRecipes/html/Recipes.html
@@ -6,6 +6,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <title>InspiRecipes</title>
         <link rel="stylesheet" href="../css/Styles.css">
+        <link rel="stylesheet" href="../css/Recipes.css">
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
 
@@ -31,6 +32,32 @@
 
             <img id="avocado" src="../Pictures/avocado.png">
         </div>
+
+        <div id="container">
+            <div id="buttons">
+                <button id="breakfast"><h2>Breakfast</h2></button>
+                <button id="lunch"><h2>Lunch</h2></button>
+                <button id="dinner"><h2>Dinner</h2></button>
+                <button id="snack"><h2>Snack</h2></button>
+                <button id="drinks"><h2>Drinks</h2></button>
+            </div>
+            <div id="recipes">
+                <h1>All recipes</h1>
+                <div id="recipePics">
+                    <img src="../Pictures/Recipe.jpg"/>
+                    <img src="../Pictures/Recipe.jpg"/>
+                    <img src="../Pictures/Recipe.jpg"/>
+                    <img src="../Pictures/Recipe.jpg"/>
+                    <img src="../Pictures/Recipe.jpg"/>
+                    <img src="../Pictures/Recipe.jpg"/>
+                </div>
+            </div>
+            <div id="filter">
+                <h1>Filter</h1>
+                <img src="../Pictures/Filter.jpg"/>
+            </div>
+        </div>
+
     </body>
 
 </html>
