--- a/InspiRecipes/html/FAQ.html
+++ b/InspiRecipes/html/FAQ.html
@@ -28,7 +28,7 @@
                 <img id="button-picture" src="../Pictures/SearchI.png" alt="search" onclick=""/>
             </div>
 
-            <button id="upload">UPLOAD YOUR RECIPE</button>
+            <button id="upload" onclick="window.location.href='Upload.html';">UPLOAD YOUR RECIPE</button>
 
             <img id="avocado" src="../Pictures/avocado.png">
         </div>
