--- a/InspiRecipes/html/index.html
+++ b/InspiRecipes/html/index.html
@@ -35,7 +35,7 @@
             </div>
 
             <!-- Buton for uploading recipes -->
-            <button id="upload">UPLOAD YOUR RECIPE</button>
+            <button id="upload" onclick="window.location.href='Upload.html';">UPLOAD YOUR RECIPE</button>
 
             <!-- Avocado picture -->
             <img id="avocado" src="../Pictures/avocado.png">
