--- a/InspiRecipes/html/Contact.html
+++ b/InspiRecipes/html/Contact.html
@@ -31,7 +31,7 @@
                     <img id="button-picture" src="../Pictures/SearchI.png" alt="search" onclick=""/>
                 </div>
 
-                <button id="upload" onclick="window.location.href='Recipes.html';" v-on:click="show = false">UPLOAD YOUR RECIPE</button>
+                <button id="upload" onclick="window.location.href='Recipes.html';">UPLOAD YOUR RECIPE</button>
 
                 <img id="avocado" src="../Pictures/avocado.png">
             </div>
@@ -52,16 +52,21 @@
                 <div id="contact">
                     <h1>Contact me</h1>
                     <h2>Your e-mail:</h2>
-                    <input class="form-control" id="mail">
+                    <input class="form-control" id="mail" v-model="newMail">
                     <h2>Message:</h2>
-                    <textarea class="form-control" id="message"></textarea>
+                    <textarea class="form-control" id="message" v-model="newMessage"></textarea>
                     <br>
-                    <button id="send">Send</button>
+                    <button id="send" v-on:click="addMail">Send</button>
+                    <p id="confirm" v-show="confirm"> 
+                        Your message: {{ messages[messages.length - 1].message }} has been successfully
+                        send. You will get an answer to your e-mail {{ messages[messages.length - 1].mail }}
+                        in a few days.
+                    </p>
                 </div>
             </div>
         </div>
 
-        <script src="../vue/recipes.js"></script>
+        <script src="../vue/contact.js"></script>
 
     </body>
 
