--- a/InspiRecipes/html/index.html
+++ b/InspiRecipes/html/index.html
@@ -97,7 +97,7 @@
 
         </div>
 
-        <script src="../vue/articles.js"></script>
+        <script src="../vue/articles.vue"></script>
 
     </body>
 
